feat : User Documentations Notations  II - verify - reset Password - Forget Password -Admin CRUDoperations
