# routes/guest.php
@@ -8,29 +8,29 @@ use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Auth\VerifyEmailController;
 use Illuminate\Support\Facades\Route;
 
- Route::post('/register', [RegisteredUserController::class, 'store'])
-                 ->middleware('guest')
-                 ->name('register');
+//  Route::post('/register', [RegisteredUserController::class, 'store'])
+//                  ->middleware('guest')
+//                  ->name('register');
 
- Route::post('/login', [AuthenticatedSessionController::class, 'store'])
-                 ->middleware('guest')
-                 ->name('login');
+//  Route::post('/login', [AuthenticatedSessionController::class, 'store'])
+//                  ->middleware('guest')
+//                  ->name('login');
 
-Route::post('/forgot-password', [PasswordResetLinkController::class, 'store'])
-                ->middleware('guest')
-                ->name('password.email');
+// Route::post('/forgot-password', [PasswordResetLinkController::class, 'store'])
+//                 ->middleware('guest')
+//                 ->name('password.email');
 
-Route::post('/reset-password', [NewPasswordController::class, 'store'])
-                ->middleware('guest')
-                ->name('password.store');
+// Route::post('/reset-password', [NewPasswordController::class, 'store'])
+//                 ->middleware('guest')
+//                 ->name('password.store');
 
-Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
-                 ->middleware(['auth:sanctum', 'signed', 'throttle:6,1'])
-                 ->name('verification.verify');
+// Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
+//                  ->middleware(['auth:sanctum', 'signed', 'throttle:6,1'])
+//                  ->name('verification.verify');
 
-Route::post('/email/verification-notification', [EmailVerificationNotificationController::class, 'store'])
-                 ->middleware(['auth:sanctum', 'throttle:6,1'])
-                 ->name('verification.send');
+// Route::post('/email/verification-notification', [EmailVerificationNotificationController::class, 'store'])
+//                  ->middleware(['auth:sanctum', 'throttle:6,1'])
+//                  ->name('verification.send');
 
 Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])
                 ->middleware('auth:sanctum')
